2015-11-20 Fred Gleason <fredg@paravelsystems.com> 	* Added an 'RD_ReadBool()' function in 'rivendell/rd_common.c' 	and 'rivendell/rd_common.h'. 	* Modified 'rivendell/addcart.c' to use 'RD_ReadBool()'. 	* Modified 'rivendell/addcut.c' to use 'RD_ReadBool()'. 	* Modified 'rivendell/editcart.c' to use 'RD_ReadBool()'. 	* Modified 'rivendell/editcut.c' to use 'RD_ReadBool()'. 	* Modified 'rivendell/listcart.c' to use 'RD_ReadBool()'. 	* Modified 'rivendell/listcarts.c' to use 'RD_ReadBool()'. 	* Modified 'rivendell/listcut.c' to use 'RD_ReadBool()'. 	* Modified 'rivendell/listcuts.c' to use 'RD_ReadBool()'. 	* Modified 'rivendell/listgroup.c' to use 'RD_ReadBool()'. 	* Modified 'rivendell/listgroups.c' to use 'RD_ReadBool()'. 	* Modified 'rivendell/listlog.c' to use 'RD_ReadBool()'. 	* Modified 'rivendell/listlogs.c' to use 'RD_ReadBool()'.

--- a/rivendell/Makefile.am
+++ b/rivendell/Makefile.am
@@ -46,7 +46,8 @@ dist_librivwebcapi_la_SOURCES = listgroups.c listgroups.h \
 				editcut.c editcut.h \
 				import.c import.h \
 				export.c export.h \
-				exportpeaks.c exportpeaks.h
+				exportpeaks.c exportpeaks.h\
+                                rd_common.c rd_common.h
 
 librivwebcapi_la_LDFLAGS = -version-info $(INTERFACE_CURRENT):$(INTERFACE_REVISION):$(INTERFACE_AGE)
 
@@ -56,6 +57,7 @@ include_HEADERS = addcart.h\
                   assignschedcode.h\
                   audioinfo.h\
                   audiostore.h\
+                  rd_common.h\
                   copyaudio.h\
                   deleteaudio.h\
                   editcart.h\
