2016-11-02 Fred Gleason <fredg@paravelsystems.com> 	* Corrected dependency in 'rivwebcapi.spec.in'.

--- a/rivwebcapi.spec.in
+++ b/rivwebcapi.spec.in
@@ -12,7 +12,7 @@ BuildRoot: 	/var/tmp/%{name}-@VERSION@
 %package devel
 Summary:        Development components for the Rivendell integration library
 Group:		System Environment/Libraries
-Requires:	rivendell-c-api
+Requires:	rivwebcapi
 
 
 %description
