2016-11-02 Fred Gleason <fredg@paravelsystems.com> 	* Added '-lcurl' to the 'libs:' field in 'rivendell.pc.in'.

--- a/rivendell.pc.in
+++ b/rivendell.pc.in
@@ -6,5 +6,5 @@ includedir=${prefix}/include/rivendell
 Name: Rivendell
 Description: Integration API for the Rivendell Radio Automation System
 Version: @VERSION@
-Libs: -L${libdir} -lrivwebcapi
+Libs: -L${libdir} -lrivwebcapi -lcurl
 Cflags: -I${includedir} -I/usr/include
