2017-01-17 Fred Gleason <fredg@paravelsystems.com> 	* Added a test in 'configure.ac' for MingW32. 	* Added a test in 'rivendell/rd_common.h' to avoid breaking the 	build under MingW32.

--- a/configure.ac
+++ b/configure.ac
@@ -106,6 +106,9 @@ else
   LIB_PATH=$PREFIX/lib
   AC_SUBST(RD_LIB_PATH,lib)
 fi
+if test $ar_gcc_os = mingw32 ; then
+  AC_DEFINE(MINGW32,"yes")
+fi
 
 #
 # Determine Distro
