Renamed all of the docbook xml files (rd_ Versions) and changed the Makefile to the new names

--- a/docbook/Makefile.am
+++ b/docbook/Makefile.am
@@ -31,230 +31,230 @@
 %.7:	%.xml
 	xsltproc $(DOCBOOK_STYLESHEETS)/manpages/docbook.xsl $<
 
-all-local:	addcart.html\
-                addcart.pdf\
-                addcart.xml\
-                addcut.html\
-                addcut.pdf\
-                addcut.xml\
-                assignschedcode.html\
-                assignschedcode.pdf\
-                assignschedcode.xml\
-                audioinfo.html\
-                audioinfo.pdf\
-                audioinfo.xml\
-                audiostore.html\
-                audiostore.pdf\
-                audiostore.xml\
+all-local:	rd_addcart.html\
+                rd_addcart.pdf\
+                rd_addcart.xml\
+                rd_addcut.html\
+                rd_addcut.pdf\
+                rd_addcut.xml\
+                rd_assignschedcode.html\
+                rd_assignschedcode.pdf\
+                rd_assignschedcode.xml\
+                rd_audioinfo.html\
+                rd_audioinfo.pdf\
+                rd_audioinfo.xml\
+                rd_audiostore.html\
+                rd_audiostore.pdf\
+                rd_audiostore.xml\
                 clibsummary.xml\
                 clibsummary.html\
                 clibsummary.pdf\
-                copyaudio.html\
-                copyaudio.pdf\
-                copyaudio.xml\
-                deleteaudio.html\
-                deleteaudio.pdf\
-                deleteaudio.xml\
-                editcart.html\
-                editcart.pdf\
-                editcart.xml\
-                editcut.html\
-                editcut.pdf\
-                editcut.xml\
-                exportpeaks.html\
-                exportpeaks.pdf\
-                exportpeaks.xml\
-                export.html\
-                export.pdf\
-                export.xml\
-                import.html\
-                import.pdf\
-                import.xml\
-                listcartschedcodes.html\
-                listcartschedcodes.pdf\
-                listcartschedcodes.xml\
-                listcarts.html\
-                listcarts.pdf\
-                listcarts.xml\
-                listcart.html\
-                listcart.pdf\
-                listcart.xml\
-                listcuts.html\
-                listcuts.pdf\
-                listcuts.xml\
-                listcut.html\
-                listcut.pdf\
-                listcut.xml\
-                listgroups.html\
-                listgroups.pdf\
-                listgroups.xml\
-                listgroup.html\
-                listgroup.pdf\
-                listgroup.xml\
-                listlogs.html\
-                listlogs.pdf\
-                listlogs.xml\
-                listlog.html\
-                listlog.pdf\
-                listlog.xml\
-                listschedcodes.html\
-                listschedcodes.pdf\
-                listschedcodes.xml\
-                listservices.html\
-                listservices.pdf\
-                listservices.xml\
-                removecart.html\
-                removecart.pdf\
-                removecart.xml\
-                removecut.html\
-                removecut.pdf\
-                removecut.xml\
-                trimaudio.html\
-                trimaudio.pdf\
-                trimaudio.xml\
-                unassignschedcode.html\
-                unassignschedcode.pdf\
-                unassignschedcode.xml
+                rd_copyaudio.html\
+                rd_copyaudio.pdf\
+                rd_copyaudio.xml\
+                rd_deleteaudio.html\
+                rd_deleteaudio.pdf\
+                rd_deleteaudio.xml\
+                rd_editcart.html\
+                rd_editcart.pdf\
+                rd_editcart.xml\
+                rd_editcut.html\
+                rd_editcut.pdf\
+                rd_editcut.xml\
+                rd_exportpeaks.html\
+                rd_exportpeaks.pdf\
+                rd_exportpeaks.xml\
+                rd_export.html\
+                rd_export.pdf\
+                rd_export.xml\
+                rd_import.html\
+                rd_import.pdf\
+                rd_import.xml\
+                rd_listcartschedcodes.html\
+                rd_listcartschedcodes.pdf\
+                rd_listcartschedcodes.xml\
+                rd_listcarts.html\
+                rd_listcarts.pdf\
+                rd_listcarts.xml\
+                rd_listcart.html\
+                rd_listcart.pdf\
+                rd_listcart.xml\
+                rd_listcuts.html\
+                rd_listcuts.pdf\
+                rd_listcuts.xml\
+                rd_listcut.html\
+                rd_listcut.pdf\
+                rd_listcut.xml\
+                rd_listgroups.html\
+                rd_listgroups.pdf\
+                rd_listgroups.xml\
+                rd_listgroup.html\
+                rd_listgroup.pdf\
+                rd_listgroup.xml\
+                rd_listlogs.html\
+                rd_listlogs.pdf\
+                rd_listlogs.xml\
+                rd_listlog.html\
+                rd_listlog.pdf\
+                rd_listlog.xml\
+                rd_listschedcodes.html\
+                rd_listschedcodes.pdf\
+                rd_listschedcodes.xml\
+                rd_listservices.html\
+                rd_listservices.pdf\
+                rd_listservices.xml\
+                rd_removecart.html\
+                rd_removecart.pdf\
+                rd_removecart.xml\
+                rd_removecut.html\
+                rd_removecut.pdf\
+                rd_removecut.xml\
+                rd_trimaudio.html\
+                rd_trimaudio.pdf\
+                rd_trimaudio.xml\
+                rd_unassignschedcode.html\
+                rd_unassignschedcode.pdf\
+                rd_unassignschedcode.xml
 
-man_MANS = addcart.7\
-           addcut.7\
-           assignschedcode.7\
-           audioinfo.7\
-           audiostore.7\
-           copyaudio.7\
-           deleteaudio.7\
-           editcart.7\
-           editcut.7\
-           exportpeaks.7\
-           export.7\
-           import.7\
-           listcartschedcodes.7\
-           listcarts.7\
-           listcart.7\
-           listcuts.7\
-           listcut.7\
-           listgroups.7\
-           listgroup.7\
-           listlogs.7\
-           listlog.7\
-           listschedcodes.7\
-           listservices.7\
-           removecart.7\
-           removecut.7\
-           trimaudio.7\
-           unassignschedcode.7
+man_MANS = rd_addcart.7\
+           rd_addcut.7\
+           rd_assignschedcode.7\
+           rd_audioinfo.7\
+           rd_audiostore.7\
+           rd_copyaudio.7\
+           rd_deleteaudio.7\
+           rd_editcart.7\
+           rd_editcut.7\
+           rd_exportpeaks.7\
+           rd_export.7\
+           rd_import.7\
+           rd_listcartschedcodes.7\
+           rd_listcarts.7\
+           rd_listcart.7\
+           rd_listcuts.7\
+           rd_listcut.7\
+           rd_listgroups.7\
+           rd_listgroup.7\
+           rd_listlogs.7\
+           rd_listlog.7\
+           rd_listschedcodes.7\
+           rd_listservices.7\
+           rd_removecart.7\
+           rd_removecut.7\
+           rd_trimaudio.7\
+           rd_unassignschedcode.7
 
-EXTRA_DIST = addcart.7\
-             addcart.html\
-             addcart.pdf\
-             addcart.xml\
-             addcut.7\
-             addcut.html\
-             addcut.pdf\
-             addcut.xml\
-             assignschedcode.7\
-             assignschedcode.html\
-             assignschedcode.pdf\
-             assignschedcode.xml\
-             audioinfo.7\
-             audioinfo.html\
-             audioinfo.pdf\
-             audioinfo.xml\
-             audiostore.7\
-             audiostore.html\
-             audiostore.pdf\
-             audiostore.xml\
+EXTRA_DIST = rd_addcart.7\
+             rd_addcart.html\
+             rd_addcart.pdf\
+             rd_addcart.xml\
+             rd_addcut.7\
+             rd_addcut.html\
+             rd_addcut.pdf\
+             rd_addcut.xml\
+             rd_assignschedcode.7\
+             rd_assignschedcode.html\
+             rd_assignschedcode.pdf\
+             rd_assignschedcode.xml\
+             rd_audioinfo.7\
+             rd_audioinfo.html\
+             rd_audioinfo.pdf\
+             rd_audioinfo.xml\
+             rd_audiostore.7\
+             rd_audiostore.html\
+             rd_audiostore.pdf\
+             rd_audiostore.xml\
              clibsummary.xml\
              clibsummary.html\
              clibsummary.pdf\
-             copyaudio.7\
-             copyaudio.html\
-             copyaudio.pdf\
-             copyaudio.xml\
-             deleteaudio.7\
-             deleteaudio.html\
-             deleteaudio.pdf\
-             deleteaudio.xml\
-             editcart.7\
-             editcart.html\
-             editcart.pdf\
-             editcart.xml\
-             editcut.7\
-             editcut.html\
-             editcut.pdf\
-             editcut.xml\
-             exportpeaks.7\
-             exportpeaks.html\
-             exportpeaks.pdf\
-             exportpeaks.xml\
-             export.7\
-             export.html\
-             export.pdf\
-             export.xml\
-             import.7\
-             import.html\
-             import.pdf\
-             import.xml\
-             listcartschedcodes.7\
-             listcartschedcodes.html\
-             listcartschedcodes.pdf\
-             listcartschedcodes.xml\
-             listcarts.7\
-             listcarts.html\
-             listcarts.pdf\
-             listcarts.xml\
-             listcart.7\
-             listcart.html\
-             listcart.pdf\
-             listcart.xml\
-             listcuts.7\
-             listcuts.html\
-             listcuts.pdf\
-             listcuts.xml\
-             listcut.7\
-             listcut.html\
-             listcut.pdf\
-             listcut.xml\
-             listgroups.7\
-             listgroups.html\
-             listgroups.pdf\
-             listgroups.xml\
-             listgroup.7\
-             listgroup.html\
-             listgroup.pdf\
-             listgroup.xml\
-             listlogs.7\
-             listlogs.html\
-             listlogs.pdf\
-             listlogs.xml\
-             listlog.7\
-             listlog.html\
-             listlog.pdf\
-             listlog.xml\
-             listschedcodes.7\
-             listschedcodes.html\
-             listschedcodes.pdf\
-             listschedcodes.xml\
-             listservices.7\
-             listservices.html\
-             listservices.pdf\
-             listservices.xml\
-             removecart.7\
-             removecart.html\
-             removecart.pdf\
-             removecart.xml\
-             removecut.7\
-             removecut.html\
-             removecut.pdf\
-             removecut.xml\
-             trimaudio.7\
-             trimaudio.html\
-             trimaudio.pdf\
-             trimaudio.xml\
-             unassignschedcode.7\
-             unassignschedcode.html\
-             unassignschedcode.pdf\
-             unassignschedcode.xml
+             rd_copyaudio.7\
+             rd_copyaudio.html\
+             rd_copyaudio.pdf\
+             rd_copyaudio.xml\
+             rd_deleteaudio.7\
+             rd_deleteaudio.html\
+             rd_deleteaudio.pdf\
+             rd_deleteaudio.xml\
+             rd_editcart.7\
+             rd_editcart.html\
+             rd_editcart.pdf\
+             rd_editcart.xml\
+             rd_editcut.7\
+             rd_editcut.html\
+             rd_editcut.pdf\
+             rd_editcut.xml\
+             rd_exportpeaks.7\
+             rd_exportpeaks.html\
+             rd_exportpeaks.pdf\
+             rd_exportpeaks.xml\
+             rd_export.7\
+             rd_export.html\
+             rd_export.pdf\
+             rd_export.xml\
+             rd_import.7\
+             rd_import.html\
+             rd_import.pdf\
+             rd_import.xml\
+             rd_listcartschedcodes.7\
+             rd_listcartschedcodes.html\
+             rd_listcartschedcodes.pdf\
+             rd_listcartschedcodes.xml\
+             rd_listcarts.7\
+             rd_listcarts.html\
+             rd_listcarts.pdf\
+             rd_listcarts.xml\
+             rd_listcart.7\
+             rd_listcart.html\
+             rd_listcart.pdf\
+             rd_listcart.xml\
+             rd_listcuts.7\
+             rd_listcuts.html\
+             rd_listcuts.pdf\
+             rd_listcuts.xml\
+             rd_listcut.7\
+             rd_listcut.html\
+             rd_listcut.pdf\
+             rd_listcut.xml\
+             rd_listgroups.7\
+             rd_listgroups.html\
+             rd_listgroups.pdf\
+             rd_listgroups.xml\
+             rd_listgroup.7\
+             rd_listgroup.html\
+             rd_listgroup.pdf\
+             rd_listgroup.xml\
+             rd_listlogs.7\
+             rd_listlogs.html\
+             rd_listlogs.pdf\
+             rd_listlogs.xml\
+             rd_listlog.7\
+             rd_listlog.html\
+             rd_listlog.pdf\
+             rd_listlog.xml\
+             rd_listschedcodes.7\
+             rd_listschedcodes.html\
+             rd_listschedcodes.pdf\
+             rd_listschedcodes.xml\
+             rd_listservices.7\
+             rd_listservices.html\
+             rd_listservices.pdf\
+             rd_listservices.xml\
+             rd_removecart.7\
+             rd_removecart.html\
+             rd_removecart.pdf\
+             rd_removecart.xml\
+             rd_removecut.7\
+             rd_removecut.html\
+             rd_removecut.pdf\
+             rd_removecut.xml\
+             rd_trimaudio.7\
+             rd_trimaudio.html\
+             rd_trimaudio.pdf\
+             rd_trimaudio.xml\
+             rd_unassignschedcode.7\
+             rd_unassignschedcode.html\
+             rd_unassignschedcode.pdf\
+             rd_unassignschedcode.xml
 
 CLEANFILES = *~
 MAINTAINERCLEANFILES = *~\
