--- a/rivwebcapi.spec.in
+++ b/rivwebcapi.spec.in
@@ -67,15 +67,20 @@ ldconfig
 %files devel
 %{_includedir}/rivendell/rd_addcart.h
 %{_includedir}/rivendell/rd_addcut.h
+%{_includedir}/rivendell/rd_addlog.h
 %{_includedir}/rivendell/rd_assignschedcode.h
 %{_includedir}/rivendell/rd_audioinfo.h
 %{_includedir}/rivendell/rd_audiostore.h
 %{_includedir}/rivendell/rd_copyaudio.h
+%{_includedir}/rivendell/rd_createticket.h
 %{_includedir}/rivendell/rd_deleteaudio.h
+%{_includedir}/rivendell/rd_deletelog.h
 %{_includedir}/rivendell/rd_editcart.h
 %{_includedir}/rivendell/rd_editcut.h
 %{_includedir}/rivendell/rd_export.h
 %{_includedir}/rivendell/rd_exportpeaks.h
+%{_includedir}/rivendell/rd_getuseragent.h
+%{_includedir}/rivendell/rd_getversion.h
 %{_includedir}/rivendell/rd_import.h
 %{_includedir}/rivendell/rd_listcart.h
 %{_includedir}/rivendell/rd_listcartschedcodes.h
@@ -88,6 +93,8 @@ ldconfig
 %{_includedir}/rivendell/rd_listlogs.h
 %{_includedir}/rivendell/rd_listschedcodes.h
 %{_includedir}/rivendell/rd_listservices.h
+%{_includedir}/rivendell/rd_listsystemsettings.h
+%{_includedir}/rivendell/rd_savelog.h
 %{_includedir}/rivendell/rd_cart.h
 %{_includedir}/rivendell/rd_common.h
 %{_includedir}/rivendell/rd_cut.h
@@ -100,33 +107,40 @@ ldconfig
 %{_libdir}/pkgconfig/rivendell.pc
 %{_libdir}/librivwebcapi.a
 %{_libdir}/librivwebcapi.la
-%{_mandir}/man7/addcart.7.gz
-%{_mandir}/man7/addcut.7.gz
-%{_mandir}/man7/assignschedcode.7.gz
-%{_mandir}/man7/audioinfo.7.gz
-%{_mandir}/man7/audiostore.7.gz
-%{_mandir}/man7/copyaudio.7.gz
-%{_mandir}/man7/deleteaudio.7.gz
-%{_mandir}/man7/editcart.7.gz
-%{_mandir}/man7/editcut.7.gz
-%{_mandir}/man7/export.7.gz
-%{_mandir}/man7/exportpeaks.7.gz
-%{_mandir}/man7/import.7.gz
-%{_mandir}/man7/listcart.7.gz
-%{_mandir}/man7/listcarts.7.gz
-%{_mandir}/man7/listcartschedcodes.7.gz
-%{_mandir}/man7/listcut.7.gz
-%{_mandir}/man7/listcuts.7.gz
-%{_mandir}/man7/listgroup.7.gz
-%{_mandir}/man7/listgroups.7.gz
-%{_mandir}/man7/listlog.7.gz
-%{_mandir}/man7/listlogs.7.gz
-%{_mandir}/man7/listschedcodes.7.gz
-%{_mandir}/man7/listservices.7.gz
-%{_mandir}/man7/removecart.7.gz
-%{_mandir}/man7/removecut.7.gz
-%{_mandir}/man7/trimaudio.7.gz
-%{_mandir}/man7/unassignschedcode.7.gz
+%{_mandir}/man7/rd_addcart.7.gz
+%{_mandir}/man7/rd_addcut.7.gz
+%{_mandir}/man7/rd_addlog.7.gz
+%{_mandir}/man7/rd_assignschedcode.7.gz
+%{_mandir}/man7/rd_audioinfo.7.gz
+%{_mandir}/man7/rd_audiostore.7.gz
+%{_mandir}/man7/rd_copyaudio.7.gz
+%{_mandir}/man7/rd_createticket.7.gz
+%{_mandir}/man7/rd_deleteaudio.7.gz
+%{_mandir}/man7/rd_deletelog.7.gz
+%{_mandir}/man7/rd_editcart.7.gz
+%{_mandir}/man7/rd_editcut.7.gz
+%{_mandir}/man7/rd_export.7.gz
+%{_mandir}/man7/rd_exportpeaks.7.gz
+%{_mandir}/man7/rd_getuseragent.7.gz
+%{_mandir}/man7/rd_getversion.7.gz
+%{_mandir}/man7/rd_import.7.gz
+%{_mandir}/man7/rd_listcart.7.gz
+%{_mandir}/man7/rd_listcarts.7.gz
+%{_mandir}/man7/rd_listcartschedcodes.7.gz
+%{_mandir}/man7/rd_listcut.7.gz
+%{_mandir}/man7/rd_listcuts.7.gz
+%{_mandir}/man7/rd_listgroup.7.gz
+%{_mandir}/man7/rd_listgroups.7.gz
+%{_mandir}/man7/rd_listlog.7.gz
+%{_mandir}/man7/rd_listlogs.7.gz
+%{_mandir}/man7/rd_listschedcodes.7.gz
+%{_mandir}/man7/rd_listservices.7.gz
+%{_mandir}/man7/rd_listsystemsettings.7.gz
+%{_mandir}/man7/rd_removecart.7.gz
+%{_mandir}/man7/rd_removecut.7.gz
+%{_mandir}/man7/rd_savelog.7.gz
+%{_mandir}/man7/rd_trimaudio.7.gz
+%{_mandir}/man7/rd_unassignschedcode.7.gz
 
 
 %changelog
